--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   overflow: hidden;
+  background-color: #eae4da;  /* Aquí cambiamos el color de fondo */
 }
 
 #canvas-container {
@@ -17,7 +18,7 @@ html, body {
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 10; /* encima */
-  font-size: 100px;
+  font-size: 1000px;
   font-family: sans-serif;
   color: rgb(0, 0, 0);
   text-shadow: 0 0 10px rgba(0,0,0,0.3);
@@ -42,7 +43,6 @@ span:nth-child(4) { animation-delay: 0.3s; }
   0%, 100% { transform: translateY(0); }
   50% { transform: translateY(-15px); }
 }
-
 
 /* Enlace y animación */
 a {
