--- a/camara/camara.css
+++ b/camara/camara.css
@@ -11,3 +11,15 @@ canvas {
   top: 0;
   left: 0;
 }
+
+#filtro-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  z-index: 2;
+  pointer-events: none; /* para que no bloquee el canvas */
+  opacity: 0.4; /* ajusta la intensidad del filtro */
+}
