--- a/menu/menu.css
+++ b/menu/menu.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'MiFuente';
-  src: url('/assets/chemyretro/TT_Version/ChemyRetro_v01.ttf') format('truetype');
+  src: url('../assets/chemyretro/TT_Version/ChemyRetro_v01.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
