--- a/menu/menu.css
+++ b/menu/menu.css
@@ -6,33 +6,46 @@
 }
 
 body {
-  background-color: #eae4da;
   margin: 0;
   padding: 0;
   font-family: 'MiFuente', sans-serif;
+  overflow: hidden;
 }
 
+/* VIDEO DE FONDO */
+#bg-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;   /* detrás de todo */
+}
 
-#p{
+#p {
     color: rgb(0, 0, 0);
     font-size: 120px;
     text-align: left;
     margin-left: 5%;
     margin-top: 80px;
+    position: relative;
+    z-index: 10;
 }
 
-a{
-  position: fixed; 
+a {
+  position: fixed;
   right: 8%;
   font-family: 'MiFuente', sans-serif;
   color: black;
   font-size: 36px;
+  text-decoration: none;
+  z-index: 10;
 }
 
-.link1{top: 30%;}
-.link2{top: 50%;}
-.link3{top: 70%;}
-
+.link1 { top: 30%; }
+.link2 { top: 50%; }
+.link3 { top: 70%; }
 
 span {
   display: inline-block;
@@ -48,7 +61,6 @@ span:nth-child(4) { animation-delay: 0.3s; }
   0%, 100% { transform: translateY(0); }
   50% { transform: translateY(-10px); }
 }
-
 
 a:hover span {
   color: #9a845d;
