--- a/style.css
+++ b/style.css
@@ -12,13 +12,22 @@ html, body {
   background-color: #eae4da;
 }
 
+#bg-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  z-index: -1;
+}
+
 #canvas-container {
   position: fixed;
   top: 0;
   left: 0;
   z-index: 0;
 }
-
 
 #overlay-box {
   position: fixed;
@@ -28,75 +37,47 @@ html, body {
   
   width: 43vw;
   height: 23vh;
-  background: #000;  
+  background: #000;
   border-radius: 20px;
 
   z-index: 5;
   box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
 }
 
-
 #texto {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
   z-index: 10;
 
   font-size: 160px;
   font-family: 'MiFuente', sans-serif;
-
   color: #eae4da;
-
-  /* Sombrita suave para que destaque */
-  /*text-shadow: 0 0 6px rgba(0, 0, 0, 0.4);*/
 
   letter-spacing: 4px;
 }
 
+span {
+  display: inline-block;
+  animation: saltar 1s infinite;
+}
+
+span:nth-child(2) { animation-delay: 0.1s; }
+span:nth-child(3) { animation-delay: 0.2s; }
+span:nth-child(4) { animation-delay: 0.3s; }
+
+@keyframes saltar {
+  0%, 100% { transform: translateY(0); }
+  50% { transform: translateY(-15px); }
+}
 
 a {
   text-decoration: none;
   color: inherit;
-}
-
-span {
-  display: inline-block;
-  animation: saltar 1s infinite;
-}
-
-span:nth-child(2) { animation-delay: 0.1s; }
-span:nth-child(3) { animation-delay: 0.2s; }
-span:nth-child(4) { animation-delay: 0.3s; }
-
-@keyframes saltar {
-  0%, 100% { transform: translateY(0); }
-  50% { transform: translateY(-15px); }
-}
-
-/* Enlace y animación
-a {
-  text-decoration: none;
-  color: rgb(0, 0, 0);
   cursor: pointer;
-}*/
-
-span {
-  display: inline-block;
-  animation: saltar 1s infinite;
 }
 
-span:nth-child(2) { animation-delay: 0.1s; }
-span:nth-child(3) { animation-delay: 0.2s; }
-span:nth-child(4) { animation-delay: 0.3s; }
-
-@keyframes saltar {
-  0%, 100% { transform: translateY(0); }
-  50% { transform: translateY(-15px); }
-}
-
-/* efecto al pasar el mouse */
 a:hover span {
   color: #9a845d;
   text-shadow: 0 0 10px #9a845d;
