--- a/style.css
+++ b/style.css
@@ -29,33 +29,33 @@ html, body {
   z-index: 0;
 }
 
-#overlay-box {
+#texto-box {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  
-  width: 43vw;
-  height: 23vh;
-  background: #000;
-  border-radius: 20px;
 
-  z-index: 5;
-  box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+  width: 50vw;
+  height: 30vh;
+  background: #000;
+  border-radius: 100px;
+
+  z-index: 10;
+  box-shadow: 0 30px 60px rgba(0, 0, 0, 0.3);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-#texto {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 10;
 
-  font-size: 160px;
+
+#texto-box a {
+  font-size: 120px;
   font-family: 'MiFuente', sans-serif;
   color: #eae4da;
-
   letter-spacing: 4px;
+  text-decoration: none;
 }
 
 span {
@@ -73,8 +73,6 @@ span:nth-child(4) { animation-delay: 0.3s; }
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
   cursor: pointer;
 }
 
