--- a/tutorial/tutorial.css
+++ b/tutorial/tutorial.css
@@ -4,9 +4,21 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
-  background-color: #eae4da ;
+  background-color: #eae4da;
   color: #333;
   font-family: Arial, sans-serif;
+  overflow: hidden;
+}
+
+
+#bg-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
 }
 
 .video-container {
@@ -14,9 +26,10 @@ body {
   text-align: center;
   width: 95%;
   max-width: 1200px;
+  z-index: 1;
 }
 
-video {
+video#tutoVideo {
   width: 100%;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
